# go2_dance_q

./: .gitignore  README.md  export_model_to_jit.py  manage_changes.sh  train_all.py
nn_convert/: actor_critic.py  bjtu_dance_twodogs.py  convert_utils.py  kinematics.py  network_convert.py  neural_network.py  nn_convert.py
nn_convert/HaoYu/: HRH_Tsinghua70_twodogs.py
opti_traj/: CPG.py  R2T.m  blender_go2_twolegwave.py  change_file.mlx  dance.m  fall.m  get_pose_keep_the_beat.m  go2_down.py  go2_sidestep.py  go2_stand.py  go2_swing.py  go2_trot.py  go2_turn_and_jump.py  go2_twolegwave_v2.txt  go2_wave.py  keep_the_beat.m  leftfoot.m  panda_arm_with_leg.py  panda_beat.py  panda_down.py  panda_gait.py  panda_pace.py  panda_stand.py  panda_swing.py  panda_swing_arm_leg.py  panda_turn_and_jump.py  panda_wave.py  phase.csv  plot_workspace.py  rightfoot.m  rx.m  ry.m  rz.m  save_json.py  swing.py  test.py  trans.m  transrpy.m  trotgait.py  truncate_sidestep.py  (+5 more)
opti_traj/STANDTraj/: panda_stand.json
opti_traj/fig/: 太空步相位1.csv  太空步相位1216.csv  太空步相位2.csv  太空步相位3.csv  打拍子动作轨迹.emf
opti_traj/go2ST/: down.json  stand.json  trot.json  turn_and_jump.json  wave.json
opti_traj/go2stand/: stand.json
opti_traj/json/: keep_the_beat_ref_simp.json
opti_traj/json_/: sidestep_truncated.json  trot.json
opti_traj/output/: down.txt  keep_the_beat_ref_simp.txt  pace.txt  sidestep.txt  sidestep_truncated.txt  stand.txt  swing.txt  swing_2.txt  trot.txt  turn_and_jump.txt  wave.txt
opti_traj/output_json/: keep_the_beat_ref_simp.json  pace.json  sidestep.json  swing.json  trot.json  turn_and_jump.json  twolegwave.json  wave.json
opti_traj/output_panda/: panda_arm_with_leg.txt  panda_beat.txt  panda_down.txt  panda_pace.txt  panda_spacetrot.txt  panda_stand.txt  panda_swing.txt  panda_trot.txt  panda_turn_and_jump.txt  panda_wave.txt
opti_traj/output_panda_fixed_arm/: panda_arm_with_leg.txt  panda_beat.txt  panda_down.txt  panda_pace.txt  panda_spacetrot.txt  panda_stand.txt  panda_swing.txt  panda_trot.txt  panda_turn_and_jump.txt  panda_wave.txt
pandacfg/: legged_robot.py  legged_robot_config.py  panda7_parkour_config.py
sim2sim/: analysis_sim_real.py  ansyis_sim2sim.py  ansyis_sim2sim_go2.py  bjtu_dance_twodogs.py  getsharememory_twodogs.py
sim2sim/BJ_Raisim/dog_arm/: .xdp_CMakeLists.txt.O7EYK2  .~lock.three_dof.DATA#  2run.sh  2run_fixed.sh  CMakeLists.txt  Makefile  Raisim_unity.sh  dog_actuator  run_go2.sh  run_panda7.sh
sim2sim/BJ_Raisim/dog_arm/Dynamics_party/: CMakeLists.txt
sim2sim/BJ_Raisim/dog_arm/Dynamics_party/CommonWbc/: CMakeLists.txt
sim2sim/BJ_Raisim/dog_arm/Dynamics_party/CommonWbc/include/Dynamics/: ActuatorModel.h  FloatingBaseModel.h  Quadruped.h  SpatialInertia.h  Uvc_dog.h  spatial.h
sim2sim/BJ_Raisim/dog_arm/common/: CMakeLists.txt  Makefile  cmake_install.cmake
sim2sim/BJ_Raisim/dog_arm/common/include/: cppTypes.h  orientation_tools.h
sim2sim/BJ_Raisim/dog_arm/common/include/comm/: xpCommon.h  xpMNMatrix.h
sim2sim/BJ_Raisim/dog_arm/common/include/utilities/: PeriodicTask.h  PeriodicTaskManager.h  SharedMemory.h  Timer.h  sem_com.h
sim2sim/BJ_Raisim/dog_arm/common/src/comm/: xpMNMatrix.cpp
sim2sim/BJ_Raisim/dog_arm/common/src/utilities/: PeriodicTask.cpp  PeriodicTaskManager.cpp  SharedMemory.cpp  Utilities_print.cpp  sem_com.cpp  utilities.cpp
sim2sim/BJ_Raisim/dog_arm/rsc/panda7_nleg_arm_1008/: panda7_nleg_0327.urdf  panda7_nleg_arm_1008.urdf
sim2sim/BJ_Raisim/dog_arm/rsc/panda7_nleg_rm_arm/: panda7_nleg_rm_arm_0102.urdf
sim2sim/BJ_Raisim/dog_arm/rsc/panda7_nleg_rm_arm/meshes/: Link6.dae  base_link.dae
sim2sim/BJ_Raisim/dog_arm/rsc/panda7_oldleg_new/meshes/: calf.dae
sim2sim/BJ_Raisim/dog_arm/rsc/panda7_oldleg_new/urdf/: panda7.urdf
sim2sim/BJ_Raisim/dog_arm/sim/: CMakeLists.txt
sim2sim/BJ_Raisim/dog_arm/sim/include/: Colors.h  DrawList.h  DynamicsSimulator.h  Graphics3D.h  SimControlPanel.h  Simulation.h  sim_utilities.h
sim2sim/BJ_Raisim/dog_arm/sim/include/Raisim/: SharedMemorySim.h  SimulatorMessage.h  xp_sim.h
sim2sim/BJ_Raisim/dog_arm/sim/include/comm_sim/Collision/: CollisionBox.h  CollisionMesh.h  CollisionPlane.h  ContactConstraint.h
sim2sim/BJ_Raisim/dog_arm/sim/include/comm_sim/ControlParameters/: SimulatorParameters.h
sim2sim/BJ_Raisim/dog_arm/sim/include/comm_sim/SimUtilities/: SimulatorMessage.h  SpineBoard.h
sim2sim/BJ_Raisim/dog_arm/sim/include/comm_sim/Utilities/: BezierCurve.h
sim2sim/BJ_Raisim/dog_arm/sim/src/: ControlParameters.cpp  DrawList.cpp  DynamicsSimulator.cpp  Graphics3D.cpp  ImuSimulator.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp  SpineBoard.cpp  obj_loader.cpp  xp_sim.cpp
sim2sim/BJ_Raisim/dog_arm/task/: CMakeLists.txt  Makefile  cmake_install.cmake
sim2sim/BJ_Raisim/dog_arm/task/include/: robot_drive_task.h
sim2sim/BJ_Raisim/dog_arm/task/src/: robot_drive_task.cpp
sim2sim/BJ_Raisim/dog_arm/user/: CMakeLists.txt  Makefile  cmake_install.cmake  readme
sim2sim/BJ_Raisim/dog_arm/user/DogActuator/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sim2sim/BJ_Raisim/dog_arm/user/DogSim/: CMakeLists.txt  main.cpp
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim/: CMakeLists.txt
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim/rsc/panda7_oldleg_new/meshes/: thigh.dae  thigh_mirror.dae
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim/src/: panda5.cpp
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim2/: CMakeLists.txt
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim2/rsc/panda7_nleg_arm_1008/: arx5.urdf  panda7_nleg_arm_1227.urdf
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim2/rsc/panda7_nleg_arm_1008/meshes/: gripper1.STL  gripper1.dae  link0.dae  link1.STL  link4.dae  link5.dae  link6.dae
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim2/rsc/panda7_nleg_rm_arm/: rm_65.urdf
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim2/rsc/panda7_nleg_rm_arm/meshes/: Link1.dae  Link5.dae
sim2sim/BJ_Raisim/dog_arm/user/DogSimRaisim2/src/: go2.cpp  panda5.cpp  panda5_6dof.cpp  panda7.cpp
sim2sim/HaoYu/: HRH_isaacgymtest.py  (+1 more)
sim2sim/dance_controller_cpp/: CMakeLists.txt  bjtu_dance.cpp
(+461 files in other folders)
