include_directories(${CMAKE_BINARY_DIR})
include_directories(${PROJECT_SOURCE_DIR})
include_directories(".")
include_directories("${PROJECT_SOURCE_DIR}/common/include/")
include_directories("${PROJECT_SOURCE_DIR}/lower_level/include/")
include_directories("${PROJECT_SOURCE_DIR}/third_party/qpOASES/include/")
include_directories("${PROJECT_SOURCE_DIR}/third_party/ParamYaml/")
include_directories("${PROJECT_SOURCE_DIR}/third_party/ParamYaml/dynacore_yaml-cpp/")
include_directories("${PROJECT_SOURCE_DIR}/mid_level/include/")
include_directories("${PROJECT_SOURCE_DIR}/third_party/EphCan/include")
include_directories("${PROJECT_SOURCE_DIR}/api_sdk/include/")
#file(GLOB_RECURSE libsources_api "${PROJECT_SOURCE_DIR}/api_sdk/lib/*.a")
include_directories("${PROJECT_SOURCE_DIR}/upper_level/include/")
include_directories("${PROJECT_SOURCE_DIR}/task/include/")
include_directories("${PROJECT_SOURCE_DIR}/opt_ctrl/include/")
include_directories("${PROJECT_SOURCE_DIR}/sim/include/comm_sim/")
if(USING_RAISIM_ENABLE)
    include_directories("${PROJECT_SOURCE_DIR}/sim/include/Raisim/")
else(USING_RAISIM_ENABLE)

endif(USING_RAISIM_ENABLE)
#include_directories("/usr/include/eigen3")
#file(GLOB_RECURSE libsources "${PROJECT_SOURCE_DIR}/lower_level/lib/*.a")
set(CMAKE_COLOR_MAKEFILE   ON)
#set(CMAKE_EXE_LINKER_FLAGS "-static")
if(USING_RAISIM_ENABLE)
    include_directories("${PROJECT_SOURCE_DIR}/third_party/rmARM/include")
    file(GLOB_RECURSE libsources_arm "${PROJECT_SOURCE_DIR}/third_party/rmARM/lib/*.so")
endif(USING_RAISIM_ENABLE)


file(GLOB_RECURSE sources
"./*.cpp")
aux_source_directory(. SRC_LIST)
add_executable(dog_actuator ${SRC_LIST})
target_link_libraries(dog_actuator xp_task_lib  qpOASES xp_sim_lib)
target_link_libraries(dog_actuator xp_common_lib pthread rt)
target_link_libraries(dog_actuator ${libsources})
target_link_libraries(dog_actuator ${libsources_api})
if(USING_RAISIM_ENABLE)
    target_link_libraries(dog_actuator ${libsources_arm})
endif(USING_RAISIM_ENABLE)
#设置可执行文件生成路径 工程bin目录下
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
